# site

./: .pre-commit-config.yaml  CLAUDE.md  middleware.ts  package-lock.json  package.json
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/src/petrus/: config.py  main.py
backend/src/petrus/api/: deps.py
backend/src/petrus/api/middleware/: auth.py  security.py
backend/src/petrus/api/routers/: config.py  contatos.py  galpoes.py  geocode.py  images.py  imoveis.py  leads.py  mdm.py  processos.py  publicacao.py  staticmap.py  storage.py
backend/src/petrus/api/schemas/: geocode.py  lead.py  mdm.py  processo.py  publicacao.py
backend/src/petrus/application/: config_service.py  contato_service.py  galpao_image_service.py  galpao_service.py  imovel_image_service.py  imovel_service.py  lead_service.py  mdm_fonte_service.py  mdm_import_service.py  mdm_processing_service.py  mdm_quality_service.py  mdm_submission_service.py  processo_file_service.py  processo_service.py  publicacao_service.py  recomendacao_service.py
backend/src/petrus/domain/entities/: config_campo.py  contato.py  galpao.py  imovel.py  lead.py  mdm.py  mdm_types.py  processo.py  publicacao.py  recomendacao.py
backend/src/petrus/domain/repositories/: config_repo.py  contato_repo.py  galpao_repo.py  imovel_repo.py  lead_repo.py  mdm_repo.py  processo_repo.py  publicacao_repo.py  recomendacao_repo.py
backend/src/petrus/domain/services/: email_service.py  geocoding_service.py  image_service.py  matcher_service.py  normalizer_service.py  quality_service.py  source_adapter.py  storage_service.py
backend/src/petrus/infrastructure/database/: supabase_client.py
backend/src/petrus/infrastructure/database/repositories/: supabase_config_repo.py  supabase_contato_repo.py  supabase_galpao_repo.py  supabase_imovel_repo.py  supabase_lead_repo.py  supabase_mdm_repos.py  supabase_processo_repo.py  (+2 more)
backend/src/petrus/infrastructure/email/: resend_email.py
backend/src/petrus/infrastructure/geocoding/: nominatim_geocoder.py
backend/src/petrus/infrastructure/imaging/: pillow_watermark.py  staticmap_generator.py
backend/src/petrus/infrastructure/mdm/: card_generator.py  file_parser.py  matcher.py  normalizer.py  quality.py
backend/src/petrus/infrastructure/storage/: supabase_storage.py
backend/tests/: conftest.py
backend/tests/fakes/: repositories.py  services.py
backend/tests/integration/api/: test_contatos_api.py  test_health.py  test_imoveis_api.py  test_leads_api.py  test_mdm_api.py
backend/tests/unit/: test_card_generator.py  test_matcher.py  test_normalizer.py  test_quality.py  test_security.py  test_transforms.py
datawork/: .gitignore  README.md  pyproject.toml
datawork/src/datawork/: __init__.py  display.py  profiling.py
datawork/src/datawork/contracts/: bronze.py  gold.py  silver.py
datawork/src/datawork/io/: loaders.py  pushers.py
datawork/src/datawork/pipeline/: runner.py  stages.py
datawork/templates/: 01_explore_source.ipynb  02_clean_and_push.ipynb
(+120 files in other folders)
