[project]
name = "petrus"
version = "0.1.0"
description = "Backend API for Alphamix Galpoes"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",
    "supabase>=2.11.0",
    "resend>=2.5.0",
    "Pillow>=11.0.0",
    "staticmap>=0.5.7",
    "python-multipart>=0.0.18",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
ai = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "pgvector>=0.3.0",
    "pypdf>=5.0.0",
]
datawork = [
    "pandas>=2.2.0",
    "pandera>=0.20.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Pure unit tests with no I/O",
    "integration: API integration tests via TestClient",
]

[tool.mypy]
python_version = "3.13"
strict = true
