[project]
name = "datawork"
version = "0.1.0"
description = "Data engineering workspace for Petrus MDM"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "pandera>=0.20.0",
    "ydata-profiling>=4.10.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
